--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
             </a>
         </div>
         <div class="lg:flex lg:gap-x-12">
-            <p class="text-sm font-bold leading-6 text-4xl text-amber-600">4V GYM</p>
+            <p class="font-bold leading-6 text-4xl text-amber-600">4V GYM</p>
         </div>
         <div class="lg:flex lg:flex-1 lg:justify-end">
         </div>
