--- a/src/app/monitors/monitors.component.html
+++ b/src/app/monitors/monitors.component.html
@@ -1,12 +1,18 @@
 <div class="relative mt-2 ml-10 mr-10">
     <div class="flex items-center">
         <input type="text" name="price" id="price"
-            class="block w-full rounded-md border-2 border-amber-600 py-1.5 pl-7 pr-10 text-black placeholder:text-black focus:outline-none focus:border-amber-600 sm:text-sm sm:leading-5" placeholder="Buscar..." aria-describedby="searcher">
+            class="block w-full rounded-md border-2 border-amber-600 py-1.5 pl-7 pr-10 text-black placeholder:text-black focus:outline-none focus:border-amber-600 sm:text-sm sm:leading-5"
+            placeholder="Buscar..." aria-describedby="searcher">
 
         <button type="button"
             class="absolute inset-y-0 right-0 flex items-center px-2 text-gray-500 focus:outline-none focus:text-gray-600"
             aria-label="Buscar">
             <i class="fa-solid fa-search"></i>
         </button>
-    </div>
+    </div> 
+</div>
+<div class="flex items-center justify-between mt-2 ml-10 mr-10">
+    <button type="button" class="ml-auto px-4 py-2 text-amber-600 font-bold text-7xl" aria-label="Botón Mas">
+        <i class="fa-solid fa-plus"></i>
+    </button>
 </div>
