--- a/src/app/monitors/monitors.component.html
+++ b/src/app/monitors/monitors.component.html
@@ -9,10 +9,26 @@
             aria-label="Buscar">
             <i class="fa-solid fa-search"></i>
         </button>
-    </div> 
+    </div>
 </div>
 <div class="flex items-center justify-between mt-2 ml-10 mr-10">
     <button type="button" class="ml-auto px-4 py-2 text-amber-600 font-bold text-7xl" aria-label="Botón Mas">
         <i class="fa-solid fa-plus"></i>
     </button>
+</div>
+<div class="max-w-sm rounded overflow-hidden shadow-lg bg-gray-300 relative">
+    <div class="absolute top-0 left-0 p-2">
+        <i class="fa-solid fa-pencil-alt text-amber-600"></i>
+    </div>
+    <div class="absolute top-0 right-0 p-2">
+        <i class="fa-solid fa-trash-alt text-amber-600"></i>
+    </div>
+    <div class="text-center mt-10 text-amber-600 text-8xl">
+        <i class="fa-solid fa-user"></i>
+    </div>
+    <div class="px-6 py-4">
+        <div class="font-bold text-xl mb-2 text-center">Nombre del usuario</div>
+        <p class="text-gray-700 text-base mb-2 text-center">correo.com</p>
+        <p class="text-gray-700 text-base text-center">123-456-7890</p>
+    </div>
 </div>
