Arreglados margenes y formateados el contenedor

--- a/src/app/monitors/monitors.component.html
+++ b/src/app/monitors/monitors.component.html
@@ -16,7 +16,7 @@
         <i class="fa-solid fa-plus"></i>
     </button>
 </div>
-<div class="max-w-sm rounded overflow-hidden shadow-lg bg-gray-300 relative">
+<div class="ml-10 mr-10 max-w-sm rounded overflow-hidden shadow-lg bg-gray-300 relative">
     <div class="absolute top-0 left-0 p-2">
         <i class="fa-solid fa-pencil-alt text-amber-600"></i>
     </div>
