--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,4 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import '@fortawesome/fontawesome-free/css/all.css';
+@import 'bootstrap/dist/css/bootstrap.min.css';
