--- a/src/app/monitors/monitors.component.html
+++ b/src/app/monitors/monitors.component.html
@@ -17,27 +17,37 @@
     </button>
 </div>
 
-<div class="carousel">
-    <carousel [itemsPerSlide]="3">
-        <slide *ngFor="let monitor of monitors">
-            <div class="ml-10 mr-10 rounded overflow-hidden shadow-lg bg-gray-300 relative">
-                <div class="absolute top-0 left-0 p-2">
-                    <i class="fa-solid fa-pencil-alt text-amber-600"></i>
-                </div>
-                <div class="absolute top-0 right-0 p-2">
-                    <i class="fa-solid fa-trash-alt text-amber-600"></i>
-                </div>
-                <div class="text-center mt-10 text-amber-600 text-8xl">
-                    <i class="fa-solid fa-user"></i>
-                </div>
-                <div class="px-6 py-4">
-                    <div class="font-bold text-xl mb-2 text-center">{{monitor.nombre}}</div>
-                    <div class="flex items-center justify-center">
-                        <a href="malito:{{ monitor.email }}" class="text-gray-700 text-base mb-2 inline-block">{{ monitor.email }}</a>
-                        <a href="tel:+34{{monitor.telefono}}" class="text-gray-700 text-base mb-2 inline-block">{{monitor.telefono}}</a>
+<!-- Verifica si hay monitores antes de mostrar el carousel -->
+<div *ngIf="monitors && monitors.length > 0">
+    <div class="carousel mt-5 ml-10 mr-10">
+        <carousel [itemsPerSlide]="3" [showIndicators]="false">
+            <slide *ngFor="let monitor of monitors">
+                <div class="ml-10 mr-10 rounded overflow-hidden shadow-lg bg-gray-300 relative">
+                    <div class="absolute top-0 left-0 p-2">
+                        <i class="fa-solid fa-pencil-alt text-amber-600"></i>
+                    </div>
+                    <div class="absolute top-0 right-0 p-2">
+                        <i class="fa-solid fa-trash-alt text-amber-600"></i>
+                    </div>
+                    <div class="text-center mt-10 text-amber-600 text-8xl">
+                        <i class="fa-solid fa-user"></i>
+                    </div>
+                    <div class="px-6 py-4">
+                        <div class="font-bold text-xl mb-2 text-center">{{ monitor.nombre }}</div>
+                        <div class="flex items-center justify-center space-y-2">
+                            <a href="malito:{{ monitor.email }}" class="text-gray-700 text-base inline-block">{{ monitor.email }}</a><br>
+                            <a href="tel:+34{{ monitor.telefono }}" class="text-gray-700 text-base inline-block">{{ monitor.telefono }}</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </slide>
-    </carousel>
-</div>
+            </slide>
+        </carousel>
+    </div>
+  </div>
+
+  <!-- Si no hay monitores, muestra un mensaje -->
+  <div *ngIf="!monitors || monitors.length === 0" class="text-center mt-5 text-red-600 mt-5 ml-10 mr-10">
+    <p class="text-2xl font-bold">¡Oops!</p>
+    <p>No hay monitores disponibles en este momento.</p>
+  </div>
+  
