--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,4 +3,6 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import '@fortawesome/fontawesome-free/css/all.css';
-@import 'bootstrap/dist/css/bootstrap.min.css';
+@import 'primeng/resources/themes/saga-blue/theme.css';
+@import 'primeng/resources/primeng.min.css';
+@import 'primeicons/primeicons.css';
