--- a/src/app/monitors/monitors.component.html
+++ b/src/app/monitors/monitors.component.html
@@ -12,9 +12,48 @@
     </div>
 </div>
 <div class="flex items-center justify-between mt-2 ml-10 mr-10">
-    <button type="button" class="ml-auto px-4 py-2 text-amber-600 font-bold text-7xl" aria-label="Botón Mas">
+    <button type="button" class="ml-auto px-4 py-2 text-amber-600 font-bold text-7xl" aria-label="Botón Mas"
+        (click)="openModal()">
         <i class="fa-solid fa-plus"></i>
     </button>
+</div>
+
+<!-- Modal -->
+<div *ngIf="isModalOpen" class="fixed inset-0 overflow-y-auto modal-container">
+    <div class="flex items-center justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+        <div class="fixed inset-0 transition-opacity" aria-hidden="true">
+            <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
+        </div>
+        <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+        <div
+            class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
+            <div class="bg-gray-50 px-4 py-5 sm:p-6">
+                <!-- Contenido del formulario para agregar monitor -->
+                <form (submit)="addMonitor()">
+                    <!-- Aquí puedes agregar tu formulario con los campos necesarios -->
+                    <div class="mb-4">
+                        <label for="nombre" class="block text-gray-700 text-sm font-bold mb-2">Nombre:</label>
+                        <input type="text" [(ngModel)]="newMonitor.nombre" id="nombre" name="nombre"
+                            class="block w-full rounded-md border-2 border-amber-600 py-1.5 px-2 text-black placeholder:text-black focus:outline-none focus:border-amber-600 sm:text-sm sm:leading-5">
+                    </div>
+                    <div class="mb-4">
+                        <label for="email" class="block text-gray-700 text-sm font-bold mb-2">Email:</label>
+                        <input type="email" [(ngModel)]="newMonitor.email" id="email" name="email"
+                            class="block w-full rounded-md border-2 border-amber-600 py-1.5 px-2 text-black placeholder:text-black focus:outline-none focus:border-amber-600 sm:text-sm sm:leading-5">
+                    </div>
+                    <div class="mb-4">
+                        <label for="telefono" class="block text-gray-700 text-sm font-bold mb-2">Teléfono:</label>
+                        <input type="tel" [(ngModel)]="newMonitor.telefono" id="telefono" name="telefono"
+                            class="block w-full rounded-md border-2 border-amber-600 py-1.5 px-2 text-black placeholder:text-black focus:outline-none focus:border-amber-600 sm:text-sm sm:leading-5">
+                    </div>
+                    <div class="flex items-center justify-between">
+                        <button type="submit" class="px-4 py-2 bg-amber-600 text-white rounded-md">Aceptar</button>
+                        <button type="button" class="px-4 py-2 text-gray-500" (click)="closeModal()">Cancelar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 
 <!-- Verifica si hay monitores antes de mostrar el carousel -->
@@ -22,7 +61,7 @@
     <p-carousel [value]="monitors" [numVisible]="numVisible" [numScroll]="1" [circular]="true">
         <ng-template let-monitor pTemplate="item">
             <div class="mt-5 ml-10 mr-10 rounded overflow-hidden shadow-lg bg-gray-300 relative">
-                <div class="absolute top-0 left-0 p-2">
+                <div class="absolute top-0 left-0 p-2" (click)="loadMonitor(monitor)">
                     <i class="fa-solid fa-pencil-alt text-amber-600"></i>
                 </div>
                 <div class="absolute top-0 right-0 p-2" (click)="removeMonitor(monitor.id)">
@@ -34,7 +73,7 @@
                 <div class="px-6 py-4">
                     <div class="font-bold text-xl mb-2 text-center">{{ monitor.nombre }}</div>
                     <div class="flex items-center justify-center space-y-2">
-                        <a href="malito:{{ monitor.email }}" class="text-gray-700 text-base inline-block">{{
+                        <a href="mailto:{{ monitor.email }}" class="text-gray-700 text-base inline-block">{{
                             monitor.email }}</a>
                     </div>
                     <div class="flex items-center justify-center space-y-2">
