Mejorado formulario de edicion y agregacion

--- a/src/app/monitors/monitors.component.html
+++ b/src/app/monitors/monitors.component.html
@@ -28,9 +28,11 @@
         <div
             class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
             <div class="bg-gray-50 px-4 py-5 sm:p-6">
-                <!-- Contenido del formulario para agregar monitor -->
                 <form (submit)="addMonitor()">
-                    <!-- Aquí puedes agregar tu formulario con los campos necesarios -->
+                    <div class="text-center text-amber-600">
+                        <i class="fa-solid fa-user text-8xl"></i>
+                        <i class="fa-solid fa-plus ml-2"></i>
+                    </div>
                     <div class="mb-4">
                         <label for="nombre" class="block text-gray-700 text-sm font-bold mb-2">Nombre:</label>
                         <input type="text" [(ngModel)]="newMonitor.nombre" id="nombre" name="nombre"
