--- a/src/app/activitys/activitys.component.html
+++ b/src/app/activitys/activitys.component.html
@@ -1,1 +1,8 @@
-<p>activitys works!</p>
+<table class="table-auto mx-auto w-full">
+    <tbody>
+        <tr>
+            <td class="px-4 py-2 text-center align-middle">Contenido 1</td>
+            <td class="px-4 py-2 text-center align-middle">Contenido 2</td>
+        </tr>
+    </tbody>
+</table>
