--- a/src/app/activitys/activitys.component.html
+++ b/src/app/activitys/activitys.component.html
@@ -1,8 +1,17 @@
-<table class="table-auto mx-auto w-full">
-    <tbody>
-        <tr>
-            <td class="px-4 py-2 text-center align-middle">Contenido 1</td>
-            <td class="px-4 py-2 text-center align-middle">Contenido 2</td>
-        </tr>
-    </tbody>
-</table>
+<div class="flex flex-wrap">
+    <div class="w-full md:w-1/2">
+        <mat-card class="mt-10 ml-10 demo-inline-calendar-card">
+            <mat-calendar class="custom-calendar" [(selected)]="date"></mat-calendar>
+            <p>fecha seleccionada: {{date}}</p>
+        </mat-card>
+    </div>
+    <div class="w-full md:w-1/2">
+        <table class="table-auto mx-auto w-full">
+            <tbody>
+                <tr>
+                    <td class="px-4 py-2 align-middle">Contenido 2</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
